fix(shared): invoke su by full path, matching bootagent's proven-working pattern
Confirmed live: ProcessBuilder("su") from inside the app's own process
did not actually elevate to root -- the resulting cat process ran as
this app's own unprivileged UID (checked via /proc/<pid>/status and
/proc/<pid>/attr/current), not root, with no exception or error
surfaced anywhere. SELinux is permissive on this device so that wasn't
the blocker either -- the su binary itself silently fell through to
running as the caller instead of elevating.

bootagent/RootOps.java independently solved the exact same problem for
this exact device's su, documented in its own header comment: needs
the full path (Runtime.getRuntime().exec("/system/bin/su")), and takes
its command via stdin rather than -c. This class already used the
stdin-feeding shape; the missing piece was the full path. adb shell's
own "su -c ..." (used throughout this session's testing) apparently
resolves/behaves differently than an app process's own PATH lookup --
not something this class can rely on.